--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "morgan": "^1.9.1",
-    "pg-promise": "^10.4.4"
+    "pg": "^7.18.2",
+    "pg-promise": "^10.4.4",
+    "socketio": "^1.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
