--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "express": "^4.17.1",
     "morgan": "^1.9.1",
     "pg": "^7.18.2",
-    "pg-promise": "^10.4.4",
-    "socketio": "^1.0.0"
+    "pg-promise": "^10.4.4"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
